--- a/client/src/CSS/login.css
+++ b/client/src/CSS/login.css
@@ -12,7 +12,6 @@
     z-index: 0;
     width: 100%;
     height: 100vh;
-    
 }
 
 .auth-card{
@@ -131,3 +130,17 @@
     top: -1px;
 }
 
+.logo{
+    width: 86px;
+    height: 46px;
+}
+
+.app-logo{
+    margin-bottom: 6px;
+    margin-left: 15px;
+}
+
+.home-container{
+    display: flex;
+    align-items: center;
+}
